--- a/templates/result.html
+++ b/templates/result.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index" class="logo">畢業門檻查詢系統</a>
+					<a href="/" class="logo">畢業門檻查詢系統(Beta)</a>
 					<nav id="nav">
 						<a href="https://ohs01.ntpu.edu.tw/student_new.htm">學生資訊系統</a>
 						<a href="http://www.csie.ntpu.edu.tw/">北大資工</a>
@@ -29,7 +29,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h1>此為105學年度入學適用之畢業計算程式</h1>
-				<h3><b><font color="#FF0000">僅供參考使用，最終畢業裁定仍以資工系系辦為主<br></font><b>
+				<h3><b><font color="#FF0000">若對結果有疑慮請洽詢系辦<br></font><b>
 			  </h3>
 			</section>
 
